Bug 1361746 - Align legacy badge on Windows in about:addons details r=rhelmer
MozReview-Commit-ID: 9QRdQFd11CQ

UltraBlame original commit: 3b67475611ddd194cdd423560f12c13cc4fd5e55

--- a/toolkit/themes/windows/mozapps/extensions/extensions.css
+++ b/toolkit/themes/windows/mozapps/extensions/extensions.css
@@ -404,3 +404,19 @@ png
 )
 ;
 }
+#
+detail
+-
+view
+.
+legacy
+-
+warning
+{
+margin
+-
+top
+:
+1rem
+;
+}
